--- a/index.html
+++ b/index.html
@@ -272,7 +272,20 @@
             <div class="row padding-lg">
                 <div class="col-lg-10 col-sm-0">
                    <!-- Testimonial -->
-
+		    <div class="testimonial testimonial-dark">
+                        <div class="testimonial-author testimonial">
+                            <div class="testimonial-author-txt" style="line-height:1.3; ">
+                              <span class="caption text" style="font-size:14px"><a style="color:#006747" href="" target="_blank">
+                              <strong>"Link Prediction by Adversarial Nonnegative Matrix Factorization"</strong></a> - 
+                              <br>
+                              R. Mahmoodi, <u>A. Seyedi</u>, F. Akhlaghian, and A. Abdollahpouri, 
+                              <span style="color:#a69d76;">Knowledge-Based Systems 2023.
+                              </span>
+                              </span>
+                            </div>
+                        </div>
+                    </div>
+			
                     <div class="testimonial testimonial-dark">
                         <div class="testimonial-author testimonial">
                             <div class="testimonial-author-txt" style="line-height:1.3; ">
@@ -452,7 +465,10 @@
                             <span class="caption text" style="font-size:14px; color:#3aa8db">
                             <strong class="blurp"  style="color:#006747; margin-bottom:-20px">Students</strong></span> 
                         </label> -->
+			    <a href="students.html" target="_blank"><span class="caption text" style="font-size:14px; color:#3aa8db">
+                            <strong class="blurp"  style="color:#006747; margin-bottom:-20px">Students</strong></span> </a>
                     </div>
+			
 
                      <!--<script src="https://cdnjs.cloudflare.com/ajax/libs/prefixfree/1.0.7/prefixfree.min.js"></script>
                     <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js'></script>
@@ -469,7 +485,7 @@
                         <span class="event-name">Nonnegative Matrix Factorization for Machine Learning (PhD), Fall 2022</span> 
                         <span class="event-name">Pattern Recognition (MSc), Fall 2018 | Spring 2020 | Spring 2021 | Spring 2022 | Spring 2023</span>
                         <span class="event-name">Special Topics in Artificial Intelligence (MSc), Fall 2021</span>
-                        <span class="event-name">Advanced Concepts in Artificial Intelligence (PhD), Spring 2023</span>
+                        <span class="event-name">Advanced Concepts in Artificial Intelligence (PhD), Spring 2023 | Fall 2023</span>
                         <span class="event-description">University of Kurdistan, Iran</span>
                         
                             <a href="teaching.html" target="_blank"><span class="caption text" style="font-size:14px; color:#3aa8db">
