--- a/students.html
+++ b/students.html
@@ -131,7 +131,7 @@ html {
     <hr>
       </h3>
 
-    <h5 class="mbr-section-title mbr-fonts-style align-left display-10">
+    <h5 class="mbr-section-subtitle mbr-fonts-style align-left mbr-light display-4">
 		[Master] Sarina Khaledian (Supervisor: F. Akhlaghian) | 2022-Present 
       <br>
        [Master] Sayvan Soleymanbeigi (Supervisors: F. Daneshfar & F. Akhlaghian) | 2022-Present
@@ -150,7 +150,7 @@ html {
       <br>
 		[Master] Navid Salahian (Supervisor: F. Akhlaghian) | 2020-2022 
       </h5>
-
+	<br><br>
 
     <h3 class="mbr-section-title mbr-fonts-style align-left display-10">    
         Mentees
