--- a/students.html
+++ b/students.html
@@ -131,7 +131,7 @@ html {
     <hr>
       </h3>
 
-    <h5 class="mbr-section-subtitle mbr-fonts-style align-left mbr-light display-4">
+    <h5 class="mbr-section-subtitle mbr-fonts-style align-left mbr-light display-4" style="line-height:1.3"> 
 		[Master] Sarina Khaledian (Supervisor: F. Akhlaghian) | 2022-Present 
       <br>
        [Master] Sayvan Soleymanbeigi (Supervisors: F. Daneshfar & F. Akhlaghian) | 2022-Present
@@ -158,7 +158,7 @@ html {
       </h3>
 
 
-    <h5 class="mbr-section-subtitle mbr-fonts-style align-left mbr-light display-4">
+    <h5 class="mbr-section-subtitle mbr-fonts-style align-left mbr-light display-4" style="line-height:1.3">
 		[PhD] Wafa Barkhoda (Supervisor: F. Akhlaghian) | 2022-Present
     <br>
 		[PhD] Reza Mahmoodi (Supervisor: F. Akhlaghian) | 2022-Present
@@ -167,16 +167,16 @@ html {
     <br>
 		[Master] Shirin Moradi (Supervisor: F. Akhlaghian - Advisor: W. Barkhoda) | 2023-Present
     <br><br>
-		[Master] Maryam Mozafari (Supervisors: R. Pir Mohammadiani & F. Akhlaghian ) | 2021-2022
+		[Master] Maryam Mozafari (Supervisors: R. Pir Mohammadiani & F. Akhlaghian) | 2021-2022
 	<br>
-		[Master] Negar Hadipour (Supervisor: P. Moradi - Advisor: F. Akhlaghian ) | 2017-2019
+		[Master] Negar Hadipour (Supervisor: P. Moradi - Advisor: F. Akhlaghian) | 2017-2019
     </h5>
 	 
 	</div>
 </section>	 
 	 
 	 
-	   <section class="section-table cid-s1um7YiuHp" id="table1-3">
+	   <section class="section-table cid-s1um7YiuHp" id="table1-3" >
 
   
   <div class="container container-table">
