--- a/students.html
+++ b/students.html
@@ -131,11 +131,13 @@ html {
     <hr>
       </h3>
 
-    <h5 class="mbr-section-subtitle mbr-fonts-style align-left mbr-light display-4" style="line-height:1.3"> 
+    <h5 class="mbr-section-subtitle mbr-fonts-style align-left mbr-light display-4" style="line-height:1.3; color:#333333"> 
 		[Master] Sarina Khaledian (Supervisor: F. Akhlaghian) | 2022-Present 
       <br>
        [Master] Sayvan Soleymanbeigi (Supervisors: F. Daneshfar & F. Akhlaghian) | 2022-Present
-      <br><br>
+      <br>
+    </h5>
+    <h5 class="mbr-section-subtitle mbr-fonts-style align-left mbr-light display-4" style="line-height:1.3"> 
 		[Master] Setare Mohammadi (Supervisor: F. Akhlaghian) | 2021-2023 
       <br>
 		[Master] Mohammad Faraji (Supervisor: F. Akhlaghian) | 2021-2023 
@@ -158,7 +160,7 @@ html {
       </h3>
 
 
-    <h5 class="mbr-section-subtitle mbr-fonts-style align-left mbr-light display-4" style="line-height:1.3">
+    <h5 class="mbr-section-subtitle mbr-fonts-style align-left mbr-light display-4" style="line-height:1.3; color:#333333">
 		[PhD] Wafa Barkhoda (Supervisor: F. Akhlaghian) | 2022-Present
     <br>
 		[PhD] Reza Mahmoodi (Supervisor: F. Akhlaghian) | 2022-Present
@@ -166,7 +168,9 @@ html {
 		[Master] M. Soran Karimi (Supervisor: F. Akhlaghian - Advisor: R. Mahmoodi) | 2022-Present
     <br>
 		[Master] Shirin Moradi (Supervisor: F. Akhlaghian - Advisor: W. Barkhoda) | 2023-Present
-    <br><br>
+    <br>
+    </h5>	
+    <h5 class="mbr-section-subtitle mbr-fonts-style align-left mbr-light display-4" style="line-height:1.3">
 		[Master] Maryam Mozafari (Supervisors: R. Pir Mohammadiani & F. Akhlaghian) | 2021-2022
 	<br>
 		[Master] Negar Hadipour (Supervisor: P. Moradi - Advisor: F. Akhlaghian) | 2017-2019
