--- a/index.html
+++ b/index.html
@@ -476,7 +476,7 @@
 
                     <div class="timeline-event te-primary" style="padding-bottom:20px">
                         <span class="event-name"><h5 class="text-tertiary margin-b-0">Graduate Research Assistant</h5></span>
-                        <span class="event-name">Deep Learning, 2019 - present</span>
+                        <span class="event-name">Machine Learning, 2019 - present</span>
                         <span class="event-description">Representation Learning Lab, University of Kurdistan, Iran</span>
                     </div>
 
