--- a/students.html
+++ b/students.html
@@ -137,6 +137,7 @@ html {
        [Master] Sayvan Soleymanbeigi (Supervisors: F. Daneshfar & F. Akhlaghian) | 2022-Present
       <br>
     </h5>
+  	<b>Alumni</b><br>
     <h5 class="mbr-section-subtitle mbr-fonts-style align-left mbr-light display-4" style="line-height:1.3"> 
 		[Master] Setare Mohammadi (Supervisor: F. Akhlaghian) | 2021-2023 
       <br>
@@ -170,6 +171,7 @@ html {
 		[Master] Shirin Moradi (Supervisor: F. Akhlaghian - Advisor: W. Barkhoda) | 2023-Present
     <br>
     </h5>	
+	  <b>Alumni</b><br>
     <h5 class="mbr-section-subtitle mbr-fonts-style align-left mbr-light display-4" style="line-height:1.3">
 		[Master] Maryam Mozafari (Supervisors: R. Pir Mohammadiani & F. Akhlaghian) | 2021-2022
 	<br>
