--- a/students.html
+++ b/students.html
@@ -127,7 +127,7 @@ html {
   <div class="container container-table">
     <h3 class="mbr-section-title mbr-fonts-style align-left display-10">
           
-        Advisees
+        Advisees (Official)
     <hr>
       </h3>
 
@@ -156,7 +156,7 @@ html {
 	<br><br>
 
     <h3 class="mbr-section-title mbr-fonts-style align-left display-10">    
-        Mentees
+       Advisees (unofficial)
     <hr>
       </h3>
 
