--- a/students.html
+++ b/students.html
@@ -132,22 +132,22 @@ html {
       </h3>
 
     <h5 class="mbr-section-subtitle mbr-fonts-style align-left mbr-light display-4" style="line-height:1.3; color:#111111"> 
-		[Master] Sarina Khaledian (Supervisor: F. Akhlaghian) | 2022-Present 
+		[Master] Sarina Khaledian (Supervisor: Dr. Akhlaghian) | 2022-Present 
       <br>
-       [Master] Sayvan Soleymanbeigi (Supervisors: F. Daneshfar & F. Akhlaghian) | 2022-Present
+       [Master] Sayvan Soleymanbeigi (Supervisors: Dr. Daneshfar & Dr. Akhlaghian) | 2022-Present
       <br>
     </h5>
   	<b>Alumni</b><br>
     <h5 class="mbr-section-subtitle mbr-fonts-style align-left mbr-light display-4" style="line-height:1.3"> 
-		[Master] Setare Mohammadi (Supervisor: F. Akhlaghian) | 2021-2023 
+		[Master] Setare Mohammadi (Supervisor: Dr. Akhlaghian) | 2021-2023 
       <br>
-		[Master] Mohammad Faraji (Supervisor: F. Akhlaghian) | 2021-2023 
+		[Master] Mohammad Faraji (Supervisor: Dr. Akhlaghian) | 2021-2023 
       <br>
-		[Master] Arina Mohammadi (Supervisors: R. Pir Mohammadiani & F. Akhlaghian) | 2022-2023 
+		[Master] Arina Mohammadi (Supervisors: Dr. Pir Mohammadiani & Dr. Akhlaghian) | 2022-2023 
       <br>
-		[Master] Akram Hajiveiseh (Supervisors: F. Akhlaghian) | 2020-2023 
+		[Master] Akram Hajiveiseh (Supervisors: Dr. Akhlaghian) | 2020-2023 
       <br>
-		[Master] Reza Mahmoodi (Supervisors: A. Abdollahpouri & F. Akhlaghian) | 2021-2022 
+		[Master] Reza Mahmoodi (Supervisors: Dr. Abdollahpouri & Dr. Akhlaghian) | 2021-2022 
       <br>
 		[Master] Jovan Chavoshinejad (Supervisor: A. Abdollahpouri) | 2020-2022 
       <br>
@@ -162,20 +162,20 @@ html {
 
 
     <h5 class="mbr-section-subtitle mbr-fonts-style align-left mbr-light display-4" style="line-height:1.3; color:#111111">
-		[PhD] Wafa Barkhoda (Supervisor: F. Akhlaghian) | 2022-Present
+		[PhD] Wafa Barkhoda (Supervisor: Dr. Akhlaghian) | 2022-Present
     <br>
-		[PhD] Reza Mahmoodi (Supervisor: F. Akhlaghian) | 2022-Present
+		[PhD] Reza Mahmoodi (Supervisor: Dr. Akhlaghian) | 2022-Present
     <br>
-		[Master] M. Soran Karimi (Supervisor: F. Akhlaghian - Advisor: R. Mahmoodi) | 2022-Present
+		[Master] M. Soran Karimi (Supervisor: Dr. Akhlaghian - Advisor: R. Mahmoodi) | 2022-Present
     <br>
-		[Master] Shirin Moradi (Supervisor: F. Akhlaghian - Advisor: W. Barkhoda) | 2023-Present
+		[Master] Shirin Moradi (Supervisor: Dr. Akhlaghian - Advisor: W. Barkhoda) | 2023-Present
     <br>
     </h5>	
 	  <b>Alumni</b><br>
     <h5 class="mbr-section-subtitle mbr-fonts-style align-left mbr-light display-4" style="line-height:1.3">
-		[Master] Maryam Mozafari (Supervisors: R. Pir Mohammadiani & F. Akhlaghian) | 2021-2022
+		[Master] Maryam Mozafari (Supervisors: Dr. Pir Mohammadiani & Dr. Akhlaghian) | 2021-2022
 	<br>
-		[Master] Negar Hadipour (Supervisor: P. Moradi - Advisor: F. Akhlaghian) | 2017-2019
+		[Master] Negar Hadipour (Supervisor: Dr. Moradi - Advisor: Dr. Akhlaghian) | 2017-2019
     </h5>
 	 
 	</div>
