--- a/students.html
+++ b/students.html
@@ -149,9 +149,9 @@ html {
       <br>
 		[Master] Reza Mahmoodi (Supervisors: Dr. Abdollahpouri & Dr. Akhlaghian) | 2021-2022 
       <br>
-		[Master] Jovan Chavoshinejad (Supervisor: A. Abdollahpouri) | 2020-2022 
+		[Master] Jovan Chavoshinejad (Supervisor: Dr. Akhlaghian) | 2020-2022 
       <br>
-		[Master] Navid Salahian (Supervisor: F. Akhlaghian) | 2020-2022 
+		[Master] Navid Salahian (Supervisor: Dr. Akhlaghian) | 2020-2022 
       </h5>
 	<br><br>
 
