--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
 		    <div class="testimonial testimonial-dark">
                         <div class="testimonial-author testimonial">
                             <div class="testimonial-author-txt" style="line-height:1.3; ">
-                              <span class="caption text" style="font-size:14px"><a style="color:#006747" href="" target="_blank">
+                              <span class="caption text" style="font-size:14px"><a style="color:#006747" href="https://doi.org/10.1016/j.knosys.2023.110998" target="_blank">
                               <strong>"Link Prediction by Adversarial Nonnegative Matrix Factorization"</strong></a> - 
                               <br>
                               R. Mahmoodi, <u>A. Seyedi</u>, F. Akhlaghian, and A. Abdollahpouri, 
