--- a/index.html
+++ b/index.html
@@ -202,6 +202,7 @@
                 <li><a href="#publications"><span>Publications</span></a></li>
                 <li><a href="#education"><span>Education</span></a></li>
                 <li><a href="#experience"><span>Experience</span></a></li>
+		<li><a href="#students"><span>Students</span></a></li>
                 <li><a href="#contact"><span>Contact</span></a></li>
             <!--  <li><a href="page-vertical.html" target="_blank"><span>Promo Page</span><span class="label label-primary margin-l-10">NEW!</span></a></li>
             <li><a href="documentation.html" target="_blank"><span>Documentation</span></a></li> -->
@@ -549,6 +550,42 @@
         </div>
     </section>
 
+	<section id="students" class="section bg-grey padding-v-20">
+        <div style="opacity:0.1" class="bg-image animated infinite zooming"><img src="assets/img/photos/it-bg011.jpg" alt="..."></div>
+        <!-- Content -->
+        <div class="container container-wide">
+            <h4 style="margin-bottom:0;margin-top:40px" class="margin-b-0"><strong>Students</strong> </h4>
+            <div class="row padding-lg">
+                <div class="col-lg-10 col-sm-0">
+                   <!-- Testimonial -->
+		    <div class="testimonial testimonial-dark">
+                        <div class="testimonial-author testimonial">
+                            <div class="testimonial-author-txt" style="line-height:1.3; ">
+                              <span class="caption text" style="font-size:14px"><a style="color:#006747">
+                              <strong>Current Students</strong></a> - 
+                              <br>
+                              [PhD] Wafa Barkhoda (Supervisor: Dr. Akhlaghian) | 2022-Present
+				<br>
+				[PhD] Reza Mahmoodi (Supervisor: Dr. Akhlaghian) | 2022-Present
+				<br>
+				[Master] M. Soran Karimi (Supervisor: Dr. Akhlaghian) | 2022-Present
+				<br>
+				[Master] Sarina Khaledian (Supervisor: Dr. Akhlaghian) | 2022-Present 
+				<br>
+				[Master] Sayvan Soleymanbeigi (Supervisors: Dr. Daneshfar &amp; Dr. Akhlaghian) | 2022-Present
+				<br>
+				[Master] Shirin Moradi (Supervisor: Dr. Akhlaghian) | 2023-Present
+                              </span>
+                            </div>
+                        </div>
+                    </div>
+			
+                    
+                </div>
+            </div>
+        </div>  
+    </section>
+	
     <section id="contact" class="section padding-v-60 min-fullheight">
         <!-- BG Map -->
         <div class="bg-image animated infinite zooming"><img src="assets/img/photos/it-bg010.jpg" alt="..."></div>
@@ -591,6 +628,7 @@
             <li><a href="#publications"><span>Publications</span></a></li>
             <li><a href="#education"><span>Education</span></a></li>
             <li><a href="#experience"><span>Experience</span></a></li>
+		<li><a href="#students"><span>Students</span></a></li>
             <li><a href="#contact"><span>Contact</span></a></li>
         </ul>
         <!-- Social Media -->
