--- a/index.html
+++ b/index.html
@@ -579,6 +579,34 @@
                             </div>
                         </div>
                     </div>
+
+		    <div class="testimonial testimonial-dark">
+                        <div class="testimonial-author testimonial">
+                            <div class="testimonial-author-txt" style="line-height:1.3; ">
+                              <span class="caption text" style="font-size:14px"><a style="color:#006747">
+                              <strong>Alumni</strong></a> - 
+                              <br>
+                              [Master] Setare Mohammadi (Supervisor: Dr. Akhlaghian) | 2021-2023 
+				<br>
+				[Master] Mohammad Faraji (Supervisor: Dr. Akhlaghian) | 2021-2023 
+				<br>
+				[Master] Arina Mohammadi (Supervisors: Dr. Pir Mohammadiani &amp; Dr. Akhlaghian) | 2022-2023 
+				<br>
+				[Master] Akram Hajiveiseh (Supervisors: Dr. Akhlaghian) | 2020-2023 
+				<br>
+				[Master] Reza Mahmoodi (Supervisors: Dr. Abdollahpouri &amp; Dr. Akhlaghian) | 2021-2022 
+				<br>
+				[Master] Jovan Chavoshinejad (Supervisor: Dr. Akhlaghian) | 2020-2022 
+				<br>
+				[Master] Navid Salahian (Supervisor: Dr. Akhlaghian) | 2020-2022 
+				<br>
+				[Master] Maryam Mozafari (Supervisors: Dr. Pir Mohammadiani &amp; Dr. Akhlaghian) | 2021-2022
+				<br>
+				[Master] Negar Hadipour (Supervisor: Dr. Moradi - Co-Advisor: Dr. Akhlaghian) | 2017-2019
+                              </span>
+                            </div>
+                        </div>
+                    </div>
 			
                     
                 </div>
