--- a/index.html
+++ b/index.html
@@ -551,7 +551,7 @@
     </section>
 
 	<section id="students" class="section bg-grey padding-v-20">
-        <div style="opacity:0.1" class="bg-image animated infinite zooming"><img src="assets/img/photos/it-bg011.jpg" alt="..."></div>
+        <div style="opacity:0.1" class="bg-image animated infinite zooming"></div>
         <!-- Content -->
         <div class="container container-wide">
             <h4 style="margin-bottom:0;margin-top:40px" class="margin-b-0"><strong>Students</strong> </h4>
@@ -561,8 +561,8 @@
 		    <div class="testimonial testimonial-dark">
                         <div class="testimonial-author testimonial">
                             <div class="testimonial-author-txt" style="line-height:1.3; ">
-                              <span class="caption text" style="font-size:14px"><a style="color:#006747">
-                              <strong>Current Students</strong></a> - 
+                              <span class="caption text" style="font-size:16px"><a style="color:#006747">
+                              <strong>Current Students</strong></a>
                               <br>
                               [PhD] Wafa Barkhoda (Supervisor: Dr. Akhlaghian) | 2022-Present
 				<br>
@@ -583,8 +583,8 @@
 		    <div class="testimonial testimonial-dark">
                         <div class="testimonial-author testimonial">
                             <div class="testimonial-author-txt" style="line-height:1.3; ">
-                              <span class="caption text" style="font-size:14px"><a style="color:#006747">
-                              <strong>Alumni</strong></a> - 
+                              <span class="caption text" style="font-size:16px"><a style="color:#006747">
+                              <strong>Alumni</strong></a> 
                               <br>
                               [Master] Setare Mohammadi (Supervisor: Dr. Akhlaghian) | 2021-2023 
 				<br>
