--- a/index.html
+++ b/index.html
@@ -561,9 +561,11 @@
 		    <div class="testimonial testimonial-dark">
                         <div class="testimonial-author testimonial">
                             <div class="testimonial-author-txt" style="line-height:1.3; ">
-                              <span class="caption text" style="font-size:16px"><a style="color:#006747">
+			    <span class="caption text" style="font-size:16px"><a style="color:#006747">
                               <strong>Current Students</strong></a>
-                              <br>
+                              </span>
+				    
+                              <span class="event-name" style="font-size:14px"><a style="color:#006747">
                               [PhD] Wafa Barkhoda (Supervisor: Dr. Akhlaghian) | 2022-Present
 				<br>
 				[PhD] Reza Mahmoodi (Supervisor: Dr. Akhlaghian) | 2022-Present
