--- a/index.html
+++ b/index.html
@@ -565,7 +565,8 @@
                               <strong>Current Students</strong></a>
                               </span>
 				    
-                              <span class="event-name" style="font-size:14px"><a style="color:#006747">
+                              <span class="event-name" style="font-size:14px">
+				<br>      
                               [PhD] Wafa Barkhoda (Supervisor: Dr. Akhlaghian) | 2022-Present
 				<br>
 				[PhD] Reza Mahmoodi (Supervisor: Dr. Akhlaghian) | 2022-Present
@@ -587,6 +588,9 @@
                             <div class="testimonial-author-txt" style="line-height:1.3; ">
                               <span class="caption text" style="font-size:16px"><a style="color:#006747">
                               <strong>Alumni</strong></a> 
+                              </span>
+
+			      <span class="event-name" style="font-size:14px">
                               <br>
                               [Master] Setare Mohammadi (Supervisor: Dr. Akhlaghian) | 2021-2023 
 				<br>
