--- a/index.html
+++ b/index.html
@@ -554,6 +554,7 @@
         <div style="opacity:0.1" class="bg-image animated infinite zooming"></div>
         <!-- Content -->
         <div class="container container-wide">
+		<span class="icon animated" data-animation="fadeInDown"><i class="ti-user text-tertiary"></i></span>
             <h4 style="margin-bottom:0;margin-top:40px" class="margin-b-0"><strong>Students</strong> </h4>
             <div class="row padding-lg">
                 <div class="col-lg-10 col-sm-0">
