--- a/index.html
+++ b/index.html
@@ -555,7 +555,7 @@
         <!-- Content -->
         <div class="container container-wide">
 		<span class="icon animated" data-animation="fadeInDown"><i class="ti-user text-tertiary"></i></span>
-            <h4 style="margin-bottom:0;margin-top:40px" class="margin-b-0"><strong>Students</strong> </h4>
+            <h4 style="margin-bottom:0" class="margin-b-0"><strong>Students</strong> </h4>
             <div class="row padding-lg">
                 <div class="col-lg-10 col-sm-0">
                    <!-- Testimonial -->
