--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
                    <!-- Testimonial -->
 		    <div class="testimonial testimonial-dark">
                         <div class="testimonial-author testimonial">
-                            <div class="testimonial-author-txt" style="line-height:1.3; ">
+                            <div class="testimonial-author-txt" style="line-height:1.1; margin-bottom:10px">
                               <span class="caption text" style="font-size:14px"><a style="color:#006747" href="https://doi.org/10.1016/j.knosys.2023.110998" target="_blank">
                               <strong>"Link Prediction by Adversarial Nonnegative Matrix Factorization"</strong></a> - 
                               <br>
@@ -289,7 +289,7 @@
 			
                     <div class="testimonial testimonial-dark">
                         <div class="testimonial-author testimonial">
-                            <div class="testimonial-author-txt" style="line-height:1.3; ">
+                            <div class="testimonial-author-txt" style="line-height:1.1; margin-bottom:10px">
                               <span class="caption text" style="font-size:14px"><a style="color:#006747" href="https://doi.org/10.1016/j.patcog.2022.109282" target="_blank">
                               <strong>"Self-Supervised Semi-Supervised Nonnegative Matrix Factorization for Data Clustering"</strong></a> - 
                               <a style="color:initial;" href="https://github.com/ChavoshiNejad/S4NMF" target="_blank">[source code]</a><br>
@@ -303,7 +303,7 @@
 
                     <div class="testimonial testimonial-dark">
                         <div class="testimonial-author testimonial">
-                            <div class="testimonial-author-txt" style="line-height:1.3; ">
+                            <div class="testimonial-author-txt" style="line-height:1.1; margin-bottom:10px">
                               <span class="caption text" style="font-size:14px"><a style="color:#006747" href="https://doi.org/10.1016/j.ins.2022.11.120" target="_blank">
                               <strong>"Elastic Adversarial Deep Nonnegative Matrix Factorization for Matrix Completion"</strong></a> - 
                               <a style="color:initial;" href="https://github.com/amjadseyedi/EADNMF" target="_blank">[source code]</a><br>
