--- a/index.html
+++ b/index.html
@@ -316,7 +316,7 @@
 
                     <div class="testimonial testimonial-dark">
                         <div class="testimonial-author testimonial">
-                            <div class="testimonial-author-txt" style="line-height:1.3; ">
+                            <div class="testimonial-author-txt" style="line-height:1.1; margin-bottom:10px">
                               <span class="caption text" style="font-size:14px"><a style="color:#006747" href="https://doi.org/10.1016/j.eswa.2022.119051" target="_blank">
                               <strong>"Deep Autoencoder-like NMF with Contrastive Regularization and Feature Relationship Preservation"</strong></a> - 
                               <a style="color:initial;" href="https://github.com/amjadseyedi/DANMF_CRFR" target="_blank">[source code]</a><br>
