--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
                    <!-- Testimonial -->
 		    <div class="testimonial testimonial-dark">
                         <div class="testimonial-author testimonial">
-                            <div class="testimonial-author-txt" style="line-height:1.1; margin-bottom:10px">
+                            <div class="testimonial-author-txt" style="line-height:1.1; margin-bottom:10px; margin-top:10px">
                               <span class="caption text" style="font-size:14px"><a style="color:#006747" href="https://doi.org/10.1016/j.knosys.2023.110998" target="_blank">
                               <strong>"Link Prediction by Adversarial Nonnegative Matrix Factorization"</strong></a> - 
                               <br>
@@ -289,7 +289,7 @@
 			
                     <div class="testimonial testimonial-dark">
                         <div class="testimonial-author testimonial">
-                            <div class="testimonial-author-txt" style="line-height:1.1; margin-bottom:10px">
+                            <div class="testimonial-author-txt" style="line-height:1.1; margin-bottom:10px; margin-top:10px">
                               <span class="caption text" style="font-size:14px"><a style="color:#006747" href="https://doi.org/10.1016/j.patcog.2022.109282" target="_blank">
                               <strong>"Self-Supervised Semi-Supervised Nonnegative Matrix Factorization for Data Clustering"</strong></a> - 
                               <a style="color:initial;" href="https://github.com/ChavoshiNejad/S4NMF" target="_blank">[source code]</a><br>
@@ -303,7 +303,7 @@
 
                     <div class="testimonial testimonial-dark">
                         <div class="testimonial-author testimonial">
-                            <div class="testimonial-author-txt" style="line-height:1.1; margin-bottom:10px">
+                            <div class="testimonial-author-txt" style="line-height:1.1; margin-bottom:10px; margin-top:10px">
                               <span class="caption text" style="font-size:14px"><a style="color:#006747" href="https://doi.org/10.1016/j.ins.2022.11.120" target="_blank">
                               <strong>"Elastic Adversarial Deep Nonnegative Matrix Factorization for Matrix Completion"</strong></a> - 
                               <a style="color:initial;" href="https://github.com/amjadseyedi/EADNMF" target="_blank">[source code]</a><br>
@@ -316,7 +316,7 @@
 
                     <div class="testimonial testimonial-dark">
                         <div class="testimonial-author testimonial">
-                            <div class="testimonial-author-txt" style="line-height:1.1; margin-bottom:10px">
+                            <div class="testimonial-author-txt" style="line-height:1.1; margin-bottom:10px; margin-top:10px">
                               <span class="caption text" style="font-size:14px"><a style="color:#006747" href="https://doi.org/10.1016/j.eswa.2022.119051" target="_blank">
                               <strong>"Deep Autoencoder-like NMF with Contrastive Regularization and Feature Relationship Preservation"</strong></a> - 
                               <a style="color:initial;" href="https://github.com/amjadseyedi/DANMF_CRFR" target="_blank">[source code]</a><br>
@@ -330,7 +330,7 @@
 
                     <div class="testimonial testimonial-dark">
                         <div class="testimonial-author testimonial">
-                            <div class="testimonial-author-txt" style="line-height:1.3; ">
+                            <div class="testimonial-author-txt" style="line-height:1.1; margin-bottom:10px; margin-top:10px">
                               <span class="caption text" style="font-size:14px"><a style="color:#006747" href="https://doi.org/10.1109/ICCKE50421.2020.9303649" target="_blank">
                               <strong>"Asymmetric Semi-Nonnegative Matrix Factorization for Directed Graph Clustering"</strong></a> - 
                               <a style="color:initial;" href="https://github.com/amjadseyedi/RAsNMF" target="_blank">[source code]</a><br>
@@ -344,7 +344,7 @@
 
                     <div class="testimonial testimonial-dark">
                         <div class="testimonial-author testimonial">
-                            <div class="testimonial-author-txt" style="line-height:1.3; ">
+                            <div class="testimonial-author-txt" style="line-height:1.1; margin-bottom:10px; margin-top:10px">
                                 <span class="caption text" style="font-size:14px"><a style="color:#006747" href="http://proceedings.mlr.press/v101/seyedi19a.html" target="_blank">
                                 <strong>"Self-Paced Multi-Label Learning with Diversity"</strong></a> -
                                 <a style="color:initial;" href="https://github.com/amjadseyedi/SPMLD" target="_blank">[source code]</a><br>
@@ -358,7 +358,7 @@
 
                     <div class="testimonial testimonial-dark">
                         <div class="testimonial-author testimonial">
-                            <div class="testimonial-author-txt" style="line-height:1.3; ">
+                            <div class="testimonial-author-txt" style="line-height:1.1; margin-bottom:10px; margin-top:10px">
                                 <span class="caption text" style="font-size:14px"><a href="https://doi.org/10.1016/j.eswa.2018.07.075" target="_blank">
                                 <strong>"Dynamic Graph-based Label Propagation for Density Peaks Clustering"</strong></a> - 
                                 <a style="color:initial;" href="https://github.com/amjadseyedi/DPC-DLP" target="_blank">[source code]</a><br>
@@ -372,7 +372,7 @@
 
                     <div class="testimonial testimonial-dark">
                         <div class="testimonial-author testimonial">
-                            <div class="testimonial-author-txt" style="line-height:1.3; ">
+                            <div class="testimonial-author-txt" style="line-height:1.1; margin-bottom:10px; margin-top:10px">
                                 <span class="caption text" style="font-size:14px"><a href="https://doi.org/10.1109/AISP.2017.8324084" target="_blank">
                                 <strong>"A Weakly-Supervised Factorization Method with Dynamic Graph Embedding"</strong></a><br>
                                 <u>A. Seyedi</u>, P. Moradi, and F. Akhlaghian Tab, 
@@ -385,7 +385,7 @@
 
                     <div class="testimonial testimonial-dark">
                         <div class="testimonial-author testimonial">
-                            <div class="testimonial-author-txt" style="line-height:1.3; ">
+                            <div class="testimonial-author-txt" style="line-height:1.1; margin-bottom:10px; margin-top:10px">
                                 <span class="caption text" style="font-size:14px"><a href="https://doi.org/10.1109/IranianCEE.2017.7985435" target="_blank">
                                 <strong>"A Clustering-based Matrix Factorization Method to Improve the Accuracy of Recommendation Systems"</strong></a><br>
                                 Z. Shajarian, <u>A. Seyedi</u>, and P. Moradi, 
@@ -398,7 +398,7 @@
 
                     <div class="testimonial testimonial-dark">
                       <div class="testimonial-author testimonial">
-                            <div class="testimonial-author-txt" style="line-height:1.3; ">
+                            <div class="testimonial-author-txt" style="line-height:1.1; margin-bottom:10px; margin-top:10px">
                                 <span class="caption text" style="font-size:14px"><a href="https://doi.org/10.1109/ICCKE.2016.7802150" target="_blank">
                                 <strong>"An Improved Density Peaks Method for Data Clustering"</strong></a> - 
                                 <a style="color:initial;" href="https://github.com/amjadseyedi/IDPC" target="_blank">[source code]</a><br>
