--- a/index.html
+++ b/index.html
@@ -273,9 +273,9 @@
             <div class="row padding-lg">
                 <div class="col-lg-10 col-sm-0">
                    <!-- Testimonial -->
-		    <div class="testimonial testimonial-dark">
-                        <div class="testimonial-author testimonial">
-                            <div class="testimonial-author-txt" style="line-height:1.1; margin-bottom:10px; margin-top:10px">
+		    <div class="">
+                        <div class="">
+                            <div class="" style="line-height:1.1; margin-bottom:15px; margin-top:15px">
                               <span class="caption text" style="font-size:14px"><a style="color:#006747" href="https://doi.org/10.1016/j.knosys.2023.110998" target="_blank">
                               <strong>"Link Prediction by Adversarial Nonnegative Matrix Factorization"</strong></a> - 
                               <br>
@@ -287,9 +287,9 @@
                         </div>
                     </div>
 			
-                    <div class="testimonial testimonial-dark">
-                        <div class="testimonial-author testimonial">
-                            <div class="testimonial-author-txt" style="line-height:1.1; margin-bottom:10px; margin-top:10px">
+                    <div class="">
+                        <div class="">
+                            <div class="" style="line-height:1.1; margin-bottom:15px; margin-top:15px">
                               <span class="caption text" style="font-size:14px"><a style="color:#006747" href="https://doi.org/10.1016/j.patcog.2022.109282" target="_blank">
                               <strong>"Self-Supervised Semi-Supervised Nonnegative Matrix Factorization for Data Clustering"</strong></a> - 
                               <a style="color:initial;" href="https://github.com/ChavoshiNejad/S4NMF" target="_blank">[source code]</a><br>
@@ -301,9 +301,9 @@
                         </div>
                     </div>
 
-                    <div class="testimonial testimonial-dark">
-                        <div class="testimonial-author testimonial">
-                            <div class="testimonial-author-txt" style="line-height:1.1; margin-bottom:10px; margin-top:10px">
+                    <div class="">
+                        <div class="">
+                            <div class="" style="line-height:1.1; margin-bottom:15px; margin-top:15px">
                               <span class="caption text" style="font-size:14px"><a style="color:#006747" href="https://doi.org/10.1016/j.ins.2022.11.120" target="_blank">
                               <strong>"Elastic Adversarial Deep Nonnegative Matrix Factorization for Matrix Completion"</strong></a> - 
                               <a style="color:initial;" href="https://github.com/amjadseyedi/EADNMF" target="_blank">[source code]</a><br>
@@ -314,9 +314,9 @@
                         </div>
                     </div>
 
-                    <div class="testimonial testimonial-dark">
-                        <div class="testimonial-author testimonial">
-                            <div class="testimonial-author-txt" style="line-height:1.1; margin-bottom:10px; margin-top:10px">
+                    <div class="">
+                        <div class="">
+                            <div class="" style="line-height:1.1; margin-bottom:15px; margin-top:15px">
                               <span class="caption text" style="font-size:14px"><a style="color:#006747" href="https://doi.org/10.1016/j.eswa.2022.119051" target="_blank">
                               <strong>"Deep Autoencoder-like NMF with Contrastive Regularization and Feature Relationship Preservation"</strong></a> - 
                               <a style="color:initial;" href="https://github.com/amjadseyedi/DANMF_CRFR" target="_blank">[source code]</a><br>
