--- a/index.html
+++ b/index.html
@@ -328,9 +328,9 @@
                         </div>
                     </div>
 
-                    <div class="testimonial testimonial-dark">
-                        <div class="testimonial-author testimonial">
-                            <div class="testimonial-author-txt" style="line-height:1.1; margin-bottom:10px; margin-top:10px">
+                    <div class="">
+                        <div class="">
+                            <div class="" style="line-height:1.1; margin-bottom:15px; margin-top:15px">
                               <span class="caption text" style="font-size:14px"><a style="color:#006747" href="https://doi.org/10.1109/ICCKE50421.2020.9303649" target="_blank">
                               <strong>"Asymmetric Semi-Nonnegative Matrix Factorization for Directed Graph Clustering"</strong></a> - 
                               <a style="color:initial;" href="https://github.com/amjadseyedi/RAsNMF" target="_blank">[source code]</a><br>
@@ -342,9 +342,9 @@
                         </div>
                     </div>
 
-                    <div class="testimonial testimonial-dark">
-                        <div class="testimonial-author testimonial">
-                            <div class="testimonial-author-txt" style="line-height:1.1; margin-bottom:10px; margin-top:10px">
+                    <div class="">
+                        <div class="">
+                            <div class="" style="line-height:1.1; margin-bottom:15px; margin-top:15px">
                                 <span class="caption text" style="font-size:14px"><a style="color:#006747" href="http://proceedings.mlr.press/v101/seyedi19a.html" target="_blank">
                                 <strong>"Self-Paced Multi-Label Learning with Diversity"</strong></a> -
                                 <a style="color:initial;" href="https://github.com/amjadseyedi/SPMLD" target="_blank">[source code]</a><br>
@@ -356,9 +356,9 @@
                         </div>
                     </div>
 
-                    <div class="testimonial testimonial-dark">
-                        <div class="testimonial-author testimonial">
-                            <div class="testimonial-author-txt" style="line-height:1.1; margin-bottom:10px; margin-top:10px">
+                    <div class="">
+                        <div class="">
+                            <div class="" style="line-height:1.1; margin-bottom:15px; margin-top:15px">
                                 <span class="caption text" style="font-size:14px"><a href="https://doi.org/10.1016/j.eswa.2018.07.075" target="_blank">
                                 <strong>"Dynamic Graph-based Label Propagation for Density Peaks Clustering"</strong></a> - 
                                 <a style="color:initial;" href="https://github.com/amjadseyedi/DPC-DLP" target="_blank">[source code]</a><br>
@@ -370,9 +370,9 @@
                         </div>
                     </div>
 
-                    <div class="testimonial testimonial-dark">
-                        <div class="testimonial-author testimonial">
-                            <div class="testimonial-author-txt" style="line-height:1.1; margin-bottom:10px; margin-top:10px">
+                    <div class="">
+                        <div class="">
+                            <div class="" style="line-height:1.1; margin-bottom:15px; margin-top:15px">
                                 <span class="caption text" style="font-size:14px"><a href="https://doi.org/10.1109/AISP.2017.8324084" target="_blank">
                                 <strong>"A Weakly-Supervised Factorization Method with Dynamic Graph Embedding"</strong></a><br>
                                 <u>A. Seyedi</u>, P. Moradi, and F. Akhlaghian Tab, 
@@ -383,9 +383,9 @@
                         </div>
                     </div>
 
-                    <div class="testimonial testimonial-dark">
-                        <div class="testimonial-author testimonial">
-                            <div class="testimonial-author-txt" style="line-height:1.1; margin-bottom:10px; margin-top:10px">
+                    <div class="">
+                        <div class="">
+                            <div class="" style="line-height:1.1; margin-bottom:15px; margin-top:15px">
                                 <span class="caption text" style="font-size:14px"><a href="https://doi.org/10.1109/IranianCEE.2017.7985435" target="_blank">
                                 <strong>"A Clustering-based Matrix Factorization Method to Improve the Accuracy of Recommendation Systems"</strong></a><br>
                                 Z. Shajarian, <u>A. Seyedi</u>, and P. Moradi, 
@@ -396,9 +396,9 @@
                         </div>
                     </div>
 
-                    <div class="testimonial testimonial-dark">
-                      <div class="testimonial-author testimonial">
-                            <div class="testimonial-author-txt" style="line-height:1.1; margin-bottom:10px; margin-top:10px">
+                    <div class="">
+                      <div class="">
+                            <div class="" style="line-height:1.1; margin-bottom:15px; margin-top:15px">
                                 <span class="caption text" style="font-size:14px"><a href="https://doi.org/10.1109/ICCKE.2016.7802150" target="_blank">
                                 <strong>"An Improved Density Peaks Method for Data Clustering"</strong></a> - 
                                 <a style="color:initial;" href="https://github.com/amjadseyedi/IDPC" target="_blank">[source code]</a><br>
