--- a/index.html
+++ b/index.html
@@ -268,6 +268,7 @@
         <div style="opacity:0.1" class="bg-image animated infinite zooming"><img src="assets/img/photos/it-bg011.jpg" alt="..."></div>
         <!-- Content -->
         <div class="container container-wide">
+		<span class="icon animated" data-animation="fadeInDown"><i class="ti-book text-tertiary"></i></span>
             <h4 style="margin-bottom:0;margin-top:10px" class="margin-b-0"><strong>Publications</strong> </h4>
             <span class="event-name"><a style="color:#006747";" href="https://scholar.google.com/citations?user=gRU1aPYAAAAJ" target="_blank">Google Scholar</a></span>
             <div class="row padding-lg">
