--- a/Publication.html
+++ b/Publication.html
@@ -6,37 +6,37 @@
 <h2>Publication</h2>
 <p><b>Thesis</b></p>
  <ul>
-  <li><a href="http://amjadseyedi.github.io/Pubs/2017 - A Weakly-Supervised Factorization Method with Dynamic Graph Embedding.pdf">2017 - A Weakly-Supervised Factorization Method with Dynamic Graph Embedding</a></li>
+  <li><a href="http://amjadseyedi.github.io/Pubs/2017 - A Weakly-Supervised Factorization Method with Dynamic Graph Embedding.pdf"  target="_blank">2017 - A Weakly-Supervised Factorization Method with Dynamic Graph Embedding</a></li>
   <li><a href="http://amjadseyedi.github.io/Pubs/2019 - Self-Paced Multi-Label Learning with Diversity.pdf">2019 - Self-Paced Multi-Label Learning with Diversity</a></li>
 </ul> 
 
 <p><b>Research Assistant</b></p>
  <ul>
-  <li><a href="http://amjadseyedi.github.io/Pubs/2023 - Elastic adversarial deep nonnegative matrix factorization for matrix completion.pdf">2023 - Elastic adversarial deep nonnegative matrix factorization for matrix completion</a></li>
+  <li><a href="http://amjadseyedi.github.io/Pubs/2023 - Elastic adversarial deep nonnegative matrix factorization for matrix completion.pdf" target="_blank">2023 - Elastic adversarial deep nonnegative matrix factorization for matrix completion</a></li>
 </ul> 
 
 <p><b>Thesis Advisor</b></p>
  <ul>
-  <li><a href="http://amjadseyedi.github.io/Pubs/2023 - Deep Autoencoder-like NMF with Contrastive Regularization and Feature Relationship Preservation.pdf">2023 - Deep Autoencoder-like NMF with Contrastive Regularization and Feature Relationship Preservation</a></li>
+  <li><a href="http://amjadseyedi.github.io/Pubs/2023 - Deep Autoencoder-like NMF with Contrastive Regularization and Feature Relationship Preservation.pdf" target="_blank">2023 - Deep Autoencoder-like NMF with Contrastive Regularization and Feature Relationship Preservation</a></li>
   
-  <li><a href="http://amjadseyedi.github.io/Pubs/2023 - Self-supervised semi-supervised nonnegative matrix factorization for data clustering.pdf">2023 - Self-supervised semi-supervised nonnegative matrix factorization for data clustering</a></li>
+  <li><a href="http://amjadseyedi.github.io/Pubs/2023 - Self-supervised semi-supervised nonnegative matrix factorization for data clustering.pdf" target="_blank">2023 - Self-supervised semi-supervised nonnegative matrix factorization for data clustering</a></li>
   
-  <li><a href="http://amjadseyedi.github.io/Pubs/2023 - Link Prediction by Adversarial Nonnegative Matrix Factorization.pdf">2023 - Link Prediction by Adversarial Nonnegative Matrix Factorization</a></li>
+  <li><a href="http://amjadseyedi.github.io/Pubs/2023 - Link Prediction by Adversarial Nonnegative Matrix Factorization.pdf" target="_blank">2023 - Link Prediction by Adversarial Nonnegative Matrix Factorization</a></li>
   
-  <li><a href="http://amjadseyedi.github.io/Pubs/First Revision -Deep Asymmetric Nonnegative Matrix Factorization for Graph Clustering.pdf">First Revision -Deep Asymmetric Nonnegative Matrix Factorization for Graph Clustering</a></li>
+  <li><a href="http://amjadseyedi.github.io/Pubs/First Revision -Deep Asymmetric Nonnegative Matrix Factorization for Graph Clustering.pdf" target="_blank">First Revision -Deep Asymmetric Nonnegative Matrix Factorization for Graph Clustering</a></li>
   
   
 </ul> 
 
 <p><b>Other Papers</b></p>
  <ul>
-  <li><a href="http://amjadseyedi.github.io/Pubs/2016 - An Improved Density Peaks Method for Data Clustering.pdf">2016 - An Improved Density Peaks Method for Data Clustering</a></li>
+  <li><a href="http://amjadseyedi.github.io/Pubs/2016 - An Improved Density Peaks Method for Data Clustering.pdf" target="_blank">2016 - An Improved Density Peaks Method for Data Clustering</a></li>
   
-  <li><a href="http://amjadseyedi.github.io/Pubs/2017 - A Clustering-based Matrix Factorization Method to Enhance the Diversity of Recommendation Systems.pdf">2017 - A Clustering-based Matrix Factorization Method to Enhance the Diversity of Recommendation Systems</a></li>
+  <li><a href="http://amjadseyedi.github.io/Pubs/2017 - A Clustering-based Matrix Factorization Method to Enhance the Diversity of Recommendation Systems.pdf" target="_blank">2017 - A Clustering-based Matrix Factorization Method to Enhance the Diversity of Recommendation Systems</a></li>
   
-  <li><a href="http://amjadseyedi.github.io/Pubs/2019 - Dynamic graph-based label propagation for density peaks clustering.pdf">2019 - Dynamic graph-based label propagation for density peaks clustering</a></li>
+  <li><a href="http://amjadseyedi.github.io/Pubs/2019 - Dynamic graph-based label propagation for density peaks clustering.pdf" target="_blank">2019 - Dynamic graph-based label propagation for density peaks clustering</a></li>
   
-  <li><a href="http://amjadseyedi.github.io/Pubs/2020 - Asymmetric Semi-Nonnegative Matrix Factorization for Directed Graph Clustering.pdf">2020 - Asymmetric Semi-Nonnegative Matrix Factorization for Directed Graph Clustering</a></li>
+  <li><a href="http://amjadseyedi.github.io/Pubs/2020 - Asymmetric Semi-Nonnegative Matrix Factorization for Directed Graph Clustering.pdf" target="_blank">2020 - Asymmetric Semi-Nonnegative Matrix Factorization for Directed Graph Clustering</a></li>
 </ul> 
 
 
