--- a/index.html
+++ b/index.html
@@ -274,6 +274,22 @@
             <div class="row padding-lg">
                 <div class="col-lg-11 col-sm-0">
                    <!-- Testimonial -->
+			
+			<div class="">
+                        <div class="">
+                            <div class="" style="line-height:1.1; margin-bottom:15px; margin-top:15px">
+                              <span class="caption text" style="font-size:14px"><a style="color:#006747" href="https://" target="_blank">
+                              <strong>" Deep Asymmetric Nonnegative Matrix Factorization for Graph Clustering "</strong></a> - 
+                              <br>
+                              A. Hajiveiseh, <u>A. Seyedi</u>, and F. Akhlaghian, 
+                              <span style="color:#a69d76;">    Pattern Recognition 2024.
+                              </span>
+                              </span>
+                            </div>
+                        </div>
+                    </div>
+
+			
 		    <div class="">
                         <div class="">
                             <div class="" style="line-height:1.1; margin-bottom:15px; margin-top:15px">
