--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@
                         <div class="">
                             <div class="" style="line-height:1.1; margin-bottom:15px; margin-top:15px">
                               <span class="caption text" style="font-size:14px"><a style="color:#006747" href="https://" target="_blank">
-                              <strong>" Deep Asymmetric Nonnegative Matrix Factorization for Graph Clustering "</strong></a> - 
+                              <strong>" Deep Asymmetric Nonnegative Matrix Factorization for Graph Clustering "</strong></a> 
                               <br>
                               A. Hajiveiseh, <u>A. Seyedi</u>, and F. Akhlaghian, 
                               <span style="color:#a69d76;">    Pattern Recognition 2024.
@@ -294,7 +294,7 @@
                         <div class="">
                             <div class="" style="line-height:1.1; margin-bottom:15px; margin-top:15px">
                               <span class="caption text" style="font-size:14px"><a style="color:#006747" href="https://doi.org/10.1016/j.knosys.2023.110998" target="_blank">
-                              <strong>"Link Prediction by Adversarial Nonnegative Matrix Factorization"</strong></a> - 
+                              <strong>"Link Prediction by Adversarial Nonnegative Matrix Factorization"</strong></a> 
                               <br>
                               R. Mahmoodi, <u>A. Seyedi</u>, F. Akhlaghian, and A. Abdollahpouri, 
                               <span style="color:#a69d76;">Knowledge-Based Systems 2023.
