--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@
 			<div class="">
                         <div class="">
                             <div class="" style="line-height:1.1; margin-bottom:15px; margin-top:15px">
-                              <span class="caption text" style="font-size:14px"><a style="color:#006747" href="https://" target="_blank">
+                              <span class="caption text" style="font-size:14px"><a style="color:#006747" href="https://doi.org/10.1016/j.patcog.2023.110179" target="_blank">
                               <strong>" Deep Asymmetric Nonnegative Matrix Factorization for Graph Clustering "</strong></a> 
                               <br>
                               A. Hajiveiseh, <u>A. Seyedi</u>, and F. Akhlaghian, 
