--- a/index.html
+++ b/index.html
@@ -274,12 +274,42 @@
             <div class="row padding-lg">
                 <div class="col-lg-11 col-sm-0">
                    <!-- Testimonial -->
+
+			<div class="">
+                        <div class="">
+                            <div class="" style="line-height:1.1; margin-bottom:15px; margin-top:15px">
+                              <span class="caption text" style="font-size:14px"><a style="color:#006747" href="https://doi.org/10.1016/j.eswa.2024.123198" target="_blank">
+                              <strong>"Unsupervised Feature Selection using Orthogonal Encoder-Decoder Factorization"</strong></a> 
+                              <br>
+                              M. Mozafari, <u>A. Seyedi</u>, R. Pir Mohammadiani, and F. Akhlaghian  
+                              <span style="color:#a69d76;">    Information Sciences 2024.
+                              </span>
+                              </span>
+                            </div>
+                        </div>
+                    </div>
+
+			
+			<div class="">
+                        <div class="">
+                            <div class="" style="line-height:1.1; margin-bottom:15px; margin-top:15px">
+                              <span class="caption text" style="font-size:14px"><a style="color:#006747" href="https://doi.org/10.1016/j.eswa.2024.123198" target="_blank">
+                              <strong>"Multi-label feature selection with global and local label correlation"</strong></a> 
+                              <br>
+                              M. Faraji, <u>A. Seyedi</u>, F. Akhlaghian, and R. Mahmoodi  
+                              <span style="color:#a69d76;">    Expert Systems with Applications 2024.
+                              </span>
+                              </span>
+                            </div>
+                        </div>
+                    </div>
+
 			
 			<div class="">
                         <div class="">
                             <div class="" style="line-height:1.1; margin-bottom:15px; margin-top:15px">
                               <span class="caption text" style="font-size:14px"><a style="color:#006747" href="https://doi.org/10.1016/j.patcog.2023.110179" target="_blank">
-                              <strong>" Deep Asymmetric Nonnegative Matrix Factorization for Graph Clustering "</strong></a> 
+                              <strong>"Deep Asymmetric Nonnegative Matrix Factorization for Graph Clustering"</strong></a> 
                               <br>
                               A. Hajiveiseh, <u>A. Seyedi</u>, and F. Akhlaghian, 
                               <span style="color:#a69d76;">    Pattern Recognition 2024.
